# JUL14Ns-Audio-Mods

./: .gitignore  BUILD_SCRIPT_README.md  BUILD_SUMMARY.md  CMakeLists.txt  LOGGING_FEATURE.md  LOGGING_TEST_GUIDE.md  QUICK_BUILD.md  TS3_PLUGIN_FORMAT.md  build.bat  build.ps1
.github/workflows/: deploy.yml
deploy/: package.ini
src/: config.cpp  config.h  config.ui  definitions.hpp  device_switcher.h  graph.cpp  graph.h  plugin.cpp  visualize.cpp  visualize.ui
